--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>活动</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.min.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.1/css/jquery-weui.min.css">
+    <link rel="stylesheet" href="./css/music.css">
     <style>
         .placeholder {
             margin: 5px;
@@ -152,20 +153,29 @@
                 </div>
             </div>
         </div>
+        <span id="musicControl">
+            <a id="mc_play" class="on" onclick="play_music();">
+                <audio id="musicfx" loop="loop" autoplay="autoplay" preload="auto" :src="activity.activityMusic">
+                </audio>
+            </a>
+        </span>
+
     </div>
+
 </body>
 <script src="https://cdn.bootcss.com/jquery/1.11.0/jquery.min.js"></script>
 <script src="./js/jquery.vticker.min.js"></script>
-<script src="./js/jcarousellite_1.0.1c4.js"></script>
+<!-- <script src="./js/jcarousellite_1.0.1c4.js"></script> -->
 <script src="https://cdn.css.net/libs/vue/2.0.3/vue.js"></script>
 <script src="https://cdn.bootcss.com/axios/0.19.0-beta.1/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue-seamless-scroll@1.1.12/dist/vue-seamless-scroll.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/vue-seamless-scroll@1.1.12/dist/vue-seamless-scroll.min.js"></script> -->
 <script>
     // var remote_url = "http://dd1079eb.ngrok.io";
     var remote_url = "http://127.0.0.1:8080";
     var pid = getQueryString('pid');
     var goodsId = getQueryString('i');
     var code = getQueryString('code');
+    var music_mp3;
     var vm = new Vue({
         el: '#app',
         data: {
@@ -282,13 +292,36 @@
             },
         }
     });
+    /**
+     * 播放音乐
+     */
+    function play_music() {
+        if ($('#mc_play').hasClass('on')) {
+            music_mp3.pause();
+            $('#mc_play').attr('class', 'stop');
+        } else {
+            music_mp3.play();
+            $('#mc_play').attr('class', 'on');
+        }
+    }
+    function just_play() {
+        music_mp3.play();
+        $('#mc_play').attr('class', 'on');
+    }
     window.onload = function () {
+        music_mp3 = document.getElementById('musicfx');
         setTimeout(function () {
             $('.myscroll').vTicker({
                 showItems: 3,
-                animation:'fade'
-            }), 5000
-        })
+                animation: 'fade'
+            }), 3000
+        });
+        //播放音乐
+        setTimeout(function () {
+            just_play(), 2000
+        });
+
+
     }
 
     //倒计时
@@ -330,6 +363,7 @@
         return null;
     };
 
+    //是否是微信
     function isWeiXin() {
         var ua = navigator.userAgent.toLowerCase();
         if (ua.match(/MicroMessenger/i) == "micromessenger") {
