--- a/store_manage.html
+++ b/store_manage.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <title>活动管理</title>
+    <title>商家活动管理</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/weui/1.1.3/style/weui.min.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/jquery-weui/1.2.1/css/jquery-weui.min.css">
     <style>
@@ -26,7 +26,7 @@
             </div>
 
             <a href="javascript:;" onclick="orderClose()" class="weui-btn weui-btn_primary">确认验证</a>
-            <a href="javascript:;" class="weui-btn weui-btn_primary">扫码核销</a>
+            <a href="javascript:;" id="scanQRCode" class="weui-btn weui-btn_primary">扫码核销</a>
         </div>
 
         <div class="weui-panel weui-panel_access">
@@ -76,7 +76,8 @@
                     <div id="tab3" class="weui-tab__bd-item">
 
                         <div class="weui-flex">
-                            <div class="weui-flex__item"><input class="weui-input" type="text" name="phone" placeholder="手机号查询"></div>
+                            <div class="weui-flex__item"><input class="weui-input" type="text" name="phone"
+                                    placeholder="手机号查询"></div>
                             <!-- <div class="weui-flex__item"></div> -->
                             <a href="javascript:;" class="weui-btn weui-btn_primary">查询</a>
                         </div>
@@ -105,55 +106,104 @@
 <script src="./js/vue-infinite-scroll.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script src="https://cdn.bootcss.com/axios/0.19.0-beta.1/axios.min.js"></script>
+<script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 <script>
-    var remote_url = "http://192.168.137.1:8080";
+    // var remote_url = "http://192.168.137.1:8080";
+    var remote_url = "http://6c84683b.ngrok.io";
     var goodsId = getQueryString('i');
     var userId = getQueryString('uid');
-    window.onload = function () {
-        var vm = new Vue({
-            el: '#app',
-            data: {
-                activity: {
-                    scanNumber: 0,
-                    joinNumber: 0,
-                    storeIncome: 0,
-                    storeWithdraw: 0,
-                    store_user: [
-                        // { name: '李四', value: '1231' },
-                    ],
-                    order_list: [
-                        // { userName: '张欢', phone: '13524002701', status: 3, orderCode: 'nx1231231' },
-                    ]
-                }
-
-            },
-            created() {
-                this.getActivityData(goodsId, userId);
-            },
-            methods: {
-                //获取活动数据
-                getActivityData: function (goodsId) {
-                    var temp = this;
-                    //发送get请求
-                    axios.get(remote_url + '/h5/activity/manage/' + userId + '/' + goodsId)
-                        .then(function (response) {
-                            console.log(response.data);
-                            if (response.data.code === 200) {
-                                temp.activity = Object.assign({}, response.data.data);
-                            } else {
-                                $.alert(response.data.msg);
-                            }
-                        })
-                        .catch(function (error) {
-                            console.log(error);
-                            $.alert("网络错误");
-                        });
-                }
+    var vm = new Vue({
+        el: '#app',
+        data: {
+            activity: {
+                scanNumber: 0,
+                joinNumber: 0,
+                storeIncome: 0,
+                storeWithdraw: 0,
+                store_user: [
+                    // { name: '李四', value: '1231' },
+                ],
+                order_list: [
+                    // { userName: '张欢', phone: '13524002701', status: 3, orderCode: 'nx1231231' },
+                ]
             }
+
+        },
+        created() {
+            this.getActivityData(goodsId, userId);
+        },
+        methods: {
+            //获取活动数据
+            getActivityData: function (goodsId) {
+                var temp = this;
+                //发送get请求
+                axios.get(remote_url + '/h5/activity/manage/' + userId + '/' + goodsId)
+                    .then(function (response) {
+                        console.log(response.data);
+                        if (response.data.code === 200) {
+                            temp.activity = Object.assign({}, response.data.data);
+                        } else {
+                            $.alert(response.data.msg);
+                        }
+                    })
+                    .catch(function (error) {
+                        console.log(error);
+                        $.alert("网络错误");
+                    });
+            }
+        }
+    });
+    function getSign() {
+        let url = 'url=http%3a%2f%2f6c84683b.ngrok.io%2fstore_manage.html%3fi%3d2%26uid%3d2';
+        axios.post(remote_url + '/h5/activity/getSign', url)
+            .then(function (response) {
+                console.log(response.data);
+                if (response.data.code === 200) {
+                    var appId = response.data.data.appId;
+                    var nonceStr = response.data.data.nonceStr;
+                    var timestamp = response.data.data.timestamp;
+                    var signature = response.data.data.signature;
+                    wx.config({
+                        debug: true,
+                        appId: appId,
+                        timestamp: timestamp,
+                        nonceStr: nonceStr,
+                        signature: signature,
+                        jsApiList: [
+                            'checkJsApi',
+                            'chooseImage',
+                            'scanQRCode'
+                        ]
+                    });
+                } else {
+                    $.alert(response.data.msg);
+                }
+            })
+            .catch(function (error) {
+                console.log(error);
+                $.alert("网络错误");
+            });
+    }
+    window.onload = function () {
+        getSign();
+        //调用扫一扫
+        $("#scanQRCode").bind("click", function () {
+            wx.scanQRCode({
+                needResult: 1, // 默认为0，扫描结果由微信处理，1则直接返回扫描结果，
+                scanType: ["qrCode", "barCode"], // 可以指定扫二维码还是一维码，默认二者都有
+                success: function (res) {
+                    console.log(res);
+                    var result = res.resultStr; // 当needResult 为 1 时，扫码返回的结果
+                    console.log(result);
+                    orderClose(result);
+                }
+            });
         });
     }
-    function orderClose() {
-        var code = $("#orderCode").val();
+    function orderClose(code) {
+        if (code == null || code == '') {
+            code = $("#orderCode").val();
+        }
         if (code == undefined || code == null || code == '') {
             $.alert("请输入核销码");
             return;
