--- a/index.html
+++ b/index.html
@@ -148,12 +148,27 @@
         </div>
         <div v-show="!activity.isEnd"
             style="overflow:hidden; position: fixed;bottom: 0;width: 100%;z-index: 10;text-align: center">
-            <a href="javascript:;"
-                style="background:tomato;width: 49%;height: 30px;line-height:30px;display: inline-block;"
-                class="open-popup" data-target="#formAdd">点击购买</a>
-            <a href="javascript:;"
-                style="background:rgba(20, 180, 68, 0.877);width: 49%;height: 30px;line-height:30px;display: inline-block;"
-                class="open-popup" data-target="#formAdd">分享赚赏金</a>
+            <div class="weui-flex">
+                <div class="weui-flex__item">
+                    <div v-if="!isOrder">
+                        <a href="javascript:;"
+                            style="background:rgba(20, 180, 68, 0.877);width: 100%;height: 40px;line-height:40px;"
+                            class="weui-btn weui-btn_plain-default open-popup" data-target="#formAdd">点击购买</a>
+                    </div>
+                    <div v-if="isOrder">
+                        <a href="javascript:;"
+                            style="background:rgba(20, 180, 68, 0.877);width: 100%;height: 40px;line-height:40px;"
+                            class="weui-btn weui-btn_plain-default open-popup" data-target="#orderCode">我的兑换码</a>
+                    </div>
+                </div>
+                <div class="weui-flex__item">
+                    <a href="javascript:;"
+                        style="background:rgba(20, 180, 68, 0.877);width: 100%;height: 40px;line-height:40px;"
+                        class="weui-btn weui-btn_plain-default open-popup" data-target="#share">分享赚赏金</a>
+                </div>
+            </div>
+
+
         </div>
         <!-- 用户下单 -->
         <div id="formAdd" class="weui-popup__container popup-bottom">
@@ -173,6 +188,14 @@
                         </div>
                     </div>
                     <a href="javascript:;" @click="createOrder" class="weui-btn weui-btn_primary">确认提交</a>
+                </div>
+            </div>
+        </div>
+        <!-- 我的兑换码 -->
+        <div id="orderCode" class="weui-popup__container popup-bottom">
+            <div class="weui-popup__overlay"></div>
+            <div class="weui-popup__modal">
+                <div id="qrcode">
                 </div>
             </div>
         </div>
@@ -208,10 +231,11 @@
 <script src="https://cdn.bootcss.com/axios/0.19.0-beta.1/axios.min.js"></script>
 <script src="./js/vue-seamless-scroll.min.js"></script>
 <script src="./js/nav.js"></script>
+<script src="./js/jquery.qrcode.min.js"></script>
 <script src="https://cdn.bootcss.com/jquery-weui/1.2.1/js/jquery-weui.min.js"></script>
 <script>
-    var remote_url = "http://6c84683b.ngrok.io";
-    // var remote_url = "http://127.0.0.1:8080";
+    // var remote_url = "http://6c84683b.ngrok.io";
+    var remote_url = "http://127.0.0.1:8080";
     var pid = getQueryString('pid');
     var goodsId = getQueryString('i');
     var code = getQueryString('code');
@@ -223,9 +247,10 @@
             remote_url: remote_url,
             isOpen: true,//默认false
             userId: 2,
-            isOrder: false,
+            isOrder: true,
             isManager: true,
             goodsId: goodsId,
+            orderCode: '1231231',
             activity: {
                 scanNumber: 0,
                 joinNumber: 0,
@@ -259,6 +284,10 @@
         },
         created() {
             this.getActivityGoods(goodsId);
+            console.log(this.isOrder);
+            if (this.isOrder) {
+                $('#qrcode').qrcode({ render: "table", height: 400, width: 400, correctLevel: 0, text: this.orderCode });
+            }
             // if (!isWeiXin()) {
             //     $.alert("请在微信打开");
             // } else {
@@ -332,11 +361,11 @@
                     "openid": "",
                     "pUserId": pid,
                 }
-                if(order.phone==''||order.phone==null){
+                if (order.phone == '' || order.phone == null) {
                     $.alert("请填写手机号");
                     return;
                 }
-                if(order.userName==''||order.userName==null){
+                if (order.userName == '' || order.userName == null) {
                     $.alert("请填写姓名");
                     return;
                 }
@@ -382,7 +411,6 @@
         setTimeout(function () {
             just_play(), 2000
         });
-
 
     }
 
